修改一下单词拼写

--- a/新的开始我的2017.md
+++ b/新的开始我的2017.md
@@ -14,17 +14,19 @@
 
 每一个人出生不同，环境不同，来自的压力也不同，就如同好友晓然说的，深圳的幸福感太低了，每个月供着 `1.3w` 的房子，想想都觉得很艰辛。但是既然喜欢这个城市的天空，就得有所付出的，都说男人不怕岁月的流逝，只怕机会的不曾来过，准备好，只需要一个机会就够了。
 
+
+
 首先我得有一个大计划：
 
 **1、工作上的需要：**
 
- `appium` 跨平台自动化测试，`iOS` 的环境及本地的 `python` 测试代码已经写好，现在只需要阅读学习庆波服务端的 `JAVA` 代码及 `web` 端代码了
+ `appium` 跨平台自动化测试，`iOS` 的环境及本地的 `python` 测试代码已经写好，现在只需要阅读学习庆波服务端的 `Java` 代码及 `web` 端代码了
 
 1.1、`python` 的学习，目标是写一个完整的小项目；
 
-1.2、`JAVA` 的学习，目标是写出一个小型的服务端，为 `web` 端提供接口数据；
+1.2、`Java` 的学习，目标是写出一个小型的服务端，为 `web` 端提供接口数据；
 
-1.3、`web` 端的学习，目标是写出一个小型的页面，由 `JAVA` 后台的接口数据构建；
+1.3、`web` 端的学习，目标是写出一个小型的页面，由 `Java` 后台的接口数据构建；
 
 1.4、`shell` 的学习，目标是写出一个脚本，自动化执行项目的构建；
 
