--- a/2017/项目组件化.md
+++ b/2017/项目组件化.md
@@ -412,6 +412,37 @@ $ pod lib lint --sources=https://github.com/CocoaPods/Specs.git,http://172.16.10
 $ pod repo push midea-specs midea-common-adddevice.podspec --sources=https://github.com/CocoaPods/Specs.git,http://172.16.10.165/midea-common/midea-specs.git --use-libraries --allow-warnings
 ```
 
+对应的脚本：
+
+```shell
+pod lib lint \
+--sources=https://github.com/CocoaPods/Specs.git,http://172.16.10.165/midea-common/midea-specs.git \
+--use-libraries --no-clean --allow-warnings
+
+if [ $? -eq 0 ]; then
+	echo "congratulation,pod verifys success! 💐 💐 💐 💐"
+
+	pod repo push midea-specs \
+	--sources=https://github.com/CocoaPods/Specs.git,http://172.16.10.165/midea-common/midea-specs.git \
+	--use-libraries --allow-warnings
+
+	if [ $? -eq 0 ]; then
+		echo "congratulation,pod push to midea-specs success! 💐 💐 💐 💐"
+	else
+		echo "pod push to midea-specs fail!"
+	fi
+else
+	echo "pod verifys fail!"
+fi
+```
+
+将该脚本命名为 `pod_auto_push.sh` 和 `xxx.podspec` 在同一目录下，执行:
+
+```shell
+cd xxx.podspec-path
+./pod_auto_push.sh
+```
+
 
 
 ### 五、相关资料：
