--- a/2017/项目组件化.md
+++ b/2017/项目组件化.md
@@ -332,10 +332,10 @@ $ cd anyPath
 $ pod repo add midea-specs http://172.16.10.165/midea-common/midea-specs.git #添加私有库地址
 
 # pod 在push的时候，如果需要切换身份，使用如下命令
-$ pod trunk register 13049862391@163.com 'erduoniba'
-$ pod me
+$ pod trunk register 13049862397@163.com 'erduoniba'
+$ pod trunk me
 $ pod trunk register denglb3@midea.com 'denglibing'
-$ pod me
+$ pod trunk me
 ```
 
 **2.7、私有库中使用资源的正确姿势**
