--- a/2017/项目组件化.md
+++ b/2017/项目组件化.md
@@ -143,7 +143,18 @@ Pod::Spec.new do |s|
     s.platform     = :ios, "8.0"
     s.requires_arc = true
     s.license      = { :type => 'MIT'}
-    s.source       =  { :git => 'https://github.com/erduoniba/HDFrameworkBMKSDK.git', :tag => "#{s.version}"}
+    
+    # 使用tag标示，代码使用该tag的代码，用于组件稳定之后使用
+    s.source       =  { 
+        :git => 'https://github.com/erduoniba/HDFrameworkBMKSDK.git', 
+        :tag => "#{s.version}"
+        }
+    
+    # 使用分支来决定代码来源，无需在git上加上tag，用于开发阶段使用
+	#s.source       =  { 
+    #    :git => 'https://github.com/erduoniba/HDFrameworkBMKSDK.git', 
+    #    :branch => "develop"
+    #    }
 
     s.subspec 'HDFrameworkBMKSDK' do |hdBMK|
         hdBMK.source_files = 'HDFrameworkBMKSDK/*.{h,m,mm}'
