--- a/2017/项目组件化.md
+++ b/2017/项目组件化.md
@@ -493,5 +493,12 @@ Inspecting targets to integrate
 # 解决，xcodeproj的路径出了一些问题，需要在Podfile添加 
 # xcodeproj 'MideaHome.xcodeproj'
 # 即可
+
+
+
+一堆警告问题：
+[!] [Xcodeproj] Generated duplicate UUIDs:
+在Podfile中添加如下代码即可
+install! 'cocoapods', :deterministic_uuids => false
 ```
 
