集成安卓数据

--- a/2020/京喜横向性能对比/京喜横向性能对比.md
+++ b/2020/京喜横向性能对比/京喜横向性能对比.md
@@ -6,47 +6,53 @@
 
 
 
-|           App           |  AvgFPS  | PeakMemory(MB) | AvgRecv(KB/s) | Package（MB） | AvgMemory(MB) |
-| :---------------------: | :------: | :------------: | :-----------: | :-----------: | :-----------: |
-|  **京喜(2.7.0)-WiFi**   | **32.2** |   **400.0**    |   **177.2**   |   **93.4**    |   **330.8**   |
-| **拼多多(4.89.0)-WiFi** | **36.2** |   **171.0**    |   **159.1**   |   **80.8**    |   **136.5**   |
-|  **京东(8.4.4)-WiFi**   | **41.8** |   **419.0**    |   **287.5**   |   **201.8**   |   **315.2**   |
-|  **淘宝(9.3.0)-WiFi**   | **37.7** |   **378.0**    |   **137.6**   |   **244.2**   |   **277.5**   |
-|   **京喜(2.7.0)-4G**    | **36.8** |   **466.0**    |   **169.2**   |   **93.4**    |   **354.4**   |
-|  **拼多多(4.89.0)-4G**  | **44.6** |   **197.0**    |   **186.7**   |   **80.8**    |   **155.6**   |
-|   **京东(8.4.4)-4G**    | **39.5** |   **568.0**    |   **131.8**   |   **201.8**   |   **315.2**   |
-|   **淘宝(9.3.0)-4G**    | **37.1** |   **355.0**    |   **108.5**   |   **244.2**   |   **270.1**   |
+|              App               |  AvgFPS  | PeakMemory(MB) | Package（MB） | AvgMemory(MB) |
+| :----------------------------: | :------: | :------------: | :-----------: | :-----------: |
+|    **京喜iOS(2.7.0)-WiFi**     | **32.2** |   **400.0**    |   **93.4**    |   **330.8**   |
+|   **拼多多iOS(4.89.0)-WiFi**   | **36.2** |   **171.0**    |   **80.8**    |   **136.5**   |
+|    **京东iOS(8.4.4)-WiFi**     | **41.8** |   **419.0**    |   **201.8**   |   **315.2**   |
+|    **淘宝iOS(9.3.0)-WiFi**     | **37.7** |   **378.0**    |   **244.2**   |   **277.5**   |
+|     **京喜iOS(2.7.0)-4G**      | **36.8** |   **466.0**    |   **93.4**    |   **354.4**   |
+|    **拼多多iOS(4.89.0)-4G**    | **44.6** |   **197.0**    |   **80.8**    |   **155.6**   |
+|     **京东iOS(8.4.4)-4G**      | **39.5** |   **568.0**    |   **201.8**   |   **315.2**   |
+|     **淘宝iOS(9.3.0)-4G**      | **37.1** |   **355.0**    |   **244.2**   |   **270.1**   |
+|                                |          |                |               |               |
+|  **京喜Android(2.7.0)-WiFi**   | **32.6** |    **826**     |    **38**     |       -       |
+| **拼多多Android(4.89.0)-WiFi** | **29.1** |    **836**     |   **20.9**    |       -       |
+|  **京东Android(8.4.4)-WiFi**   | **38.5** |    **743**     |    **83**     |       -       |
+|  **淘宝Android(9.3.0)-WiFi**   |  **35**  |    **764**     |   **106.7**   |       -       |
 
 
 
 AvgFPS（平均帧率）：
 
-**京东(有直播模块列表，未进直播) > 淘宝(有直播模块列表，未进直播) > 拼多多 > 京喜**
+**iOS:  		  京东 > 淘宝 > 拼多多 > 京喜**
+
+**Android:   京东 > 淘宝 > 京喜 > 拼多多**
 
 
 
-PeakMemory（最小内存占用）：
+PeakMemory（内存占用峰值）：
 
-**拼多多 > 淘宝 > 京喜 > 京东**
+**iOS:  		  拼多多 < 淘宝 < 京喜 < 京东**
 
-
-
-AvgMemory（平均最小内存占用）：
-
-**拼多多 > 淘宝 > 京喜 > 京东**
+**Android:   淘宝 < 京东 < 京喜 < 拼多多**
 
 
 
-AvgRecv（每秒最小收到数据）：
+AvgMemory（平均内存占用）：
 
-**淘宝 > 拼多多 > 京喜 > 京东**
-
-
-
-Package (AppStore显示包体积大小)
-
-**拼多多 > 京喜 > 京东 > 淘宝**
+**iOS:  		拼多多 < 淘宝 < 京喜 < 京东**
 
 
 
-以上数据使用 `iPhone8/iOS13.3` 进行测试，因为测试过程中，各个App的业务及功能复杂度并不一样（比如拼多多首页及商详极其简洁，所以测试过程很快，其他App比较复杂），只能确保走的大致流程是一致的，数据仅供参考。
+Package (AppStore/应用宝市场显示包体积大小)
+
+**iOS:  		  拼多多 < 京喜 < 京东 < 淘宝**
+
+**Android:   拼多多 < 京喜 < 京东 < 淘宝**
+
+
+
+以上数据使用 `iOS：iPhone8/iOS13.3、Android：Pixel3/Android9` 进行测试，因为测试过程中，各个App的业务及功能复杂度并不一样（比如拼多多首页及商详极其简洁，所以测试过程很快，其他App比较复杂），只能确保走的大致流程是一致的，数据仅供参考。
+
